--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,21 @@
-.App {
-  text-align: center;
+.pokeCard:hover {
+  box-shadow: 12px 18px #607c8a !important;
+  transition: box-shadow 1.2s;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+* {
+  background-color: transparent !important;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.pokeCard {
+  background-color: white !important;
+}
+html {
+  background-image: url("https://d.facdn.net/art/giovannicotonecoda/1405291602/1405291602.giovannicotonecoda_pokeballwallpaper_dt.png");
+}
+h1 {
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* .pokeCard:hover .pokeImage {
+  width: 30vw;
+  position: absolute;
+  height: auto;
+} */
